Sugati/src/objects/Itinerary_Content_Category__c.object
<CustomObject>
    <fields>
        <fullName>Final_Doc__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Final Doc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ICC_Content_Category_Label__c</fullName>
        <label>Content Category Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ICC_Order__c</fullName>
        <label>Order</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Itinerary Category</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ICC_Order__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Itinerary Content Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Itinerary Categories</pluralLabel>
    <recordTypes>
        <fullName>Print</fullName>
        <active>true</active>
        <label>Print</label>
    </recordTypes>
    <recordTypes>
        <fullName>Web</fullName>
        <active>true</active>
        <label>Web</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>